--- a/project/apps/notifications/src/assets/no-new-posts.hbs
+++ b/project/apps/notifications/src/assets/no-new-posts.hbs
@@ -1,2 +1,2 @@
 <h2>Здравствуйте, {{subscriber.name}}</h2>
-<p>Со времени вашего последнего запроса новых постов не появилось.</p>
+<p>Со времени последнего запроса новых постов не появилось.</p>
